unpackaged/main/default/objects/Contact/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#SAL-556 - Field created for Contact Management</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>