unpackaged/main/default/objects/Contact/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>#SAL-556 - Field created for Contact Management</description>
    <label>Extension</label>
    <length>25</length>
    <type>Text</type>
</CustomField>