unpackaged/main/default/objects/Contact/fields/SecondaryEmail__c.field-meta.xml
<CustomField>
    <fullName>SecondaryEmail__c</fullName>
    <description>#SAL-556 - Field created for Contact Management</description>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>