unpackaged/main/default/objects/Contact/fields/SurveyContact__c.field-meta.xml
<CustomField>
    <fullName>SurveyContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#SAL-556 - NPS Surveys and all verticals use this to manage who will be an NPS survey recipient.</description>
    <label>Survey Contact</label>
    <type>Checkbox</type>
</CustomField>